--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -10,12 +10,25 @@
         <title>Car Animation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+
+        <div class='hero'>
+            <div class='highway'></div>
+            <div class='city'></div>
+            <div class='car'>
+                <img class='body' src='img/car.png' />
+            </div>
+            <div class='wheel'>
+                <img class='front' src='img/wheel.png' />
+                <img class='back' src='img/wheel.png' />
+            </div>
+        </div>
         
         <script src="" async defer></script>
     </body>
